[package]
name = "rust-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.22"
message-io = { version = "0.18", default-features = false, features = ["websocket"] }
thiserror = "1.0"
